Add Configuration for Actuator and Mail

--- a/sales-api/sales-api/src/main/resources/application.properties
+++ b/sales-api/sales-api/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+application.mail.default-remetent=mail@sales.com
 
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=7e38dbea71a6f5
+spring.mail.password=0dbc90bb9cc361
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+management.endpoints.web.exposure.include=*
+
+logging.file.name=appfile.log
