--- a/sales-api/sales-api/src/main/resources/application.properties
+++ b/sales-api/sales-api/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 management.endpoints.web.exposure.include=*
 
-logging.file.name=appfile.log
+logging.file.name=logs/appfile.log
 
 spring.boot.admin.client.url=http://localhost:8081/
