--- a/sales-api/sales-api/.travis.yml
+++ b/sales-api/sales-api/.travis.yml
@@ -1,6 +1,6 @@
+dist: trusty
 language: java
 jdk:
-  - oraclejdk8
-dist: trusty
+- oraclejdk8
 before_install:
-  - chmod +x mvnw
+- export TZ=Brazil/East
