--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.2</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*SalesApiApplication.*</exclude>
+						<exclude>**/dto/*</exclude>
+						<exclude>**/entity/*</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
