--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.profiles.active=development
+
+server.port=8080
+
 application.mail.default-remetent=mail@sales.com
 
 spring.mail.protocol=smtp
