--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.profiles.active=development
 
 server.port=8080
 
+#Mails
 application.mail.default-remetent=mail@sales.com
 
 spring.mail.protocol=smtp
@@ -9,12 +10,28 @@ spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=7e38dbea71a6f5
 spring.mail.password=0dbc90bb9cc361
-
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-management.endpoints.web.exposure.include=*
-
+#Logs
 logging.file.name=logs/appfile.log
 
+#Spring Boot Admin
+management.endpoints.web.exposure.include=*
 spring.boot.admin.client.url=http://localhost:8081/
+
+#Database
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sales?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+#Flyway
+flyway.url=jdbc:mysql://localhost:3306/
+flyway.schemas=sales
+flyway.user=root
+flyway.password=
