--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ management.endpoints.web.exposure.include=*
 spring.boot.admin.client.url=http://localhost:8081/
 
 
+
+#Flyway
+flyway.url=jdbc:mysql://localhost:3306/
+flyway.schemas=sales
+flyway.user=root
+flyway.password=
