--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,16 @@ logging.file.name=logs/appfile.log
 management.endpoints.web.exposure.include=*
 spring.boot.admin.client.url=http://localhost:8081/
 
+#Database
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sales?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
 #Flyway
 flyway.url=jdbc:mysql://localhost:3306/
 flyway.schemas=sales
