--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ flyway.url=jdbc:mysql://localhost:3306/
 flyway.schemas=sales
 flyway.user=root
 flyway.password=
+
+#Security
+security.jwt.token.secret-key=secret
+security.jwt.token.expire-length=3600000
